@@ -2,7 +2,11 @@
  * @file
  * Overrides over-specified tough Seven.
  */
-#field-display-overview .field-formatter-settings-edit-form .form--slick,
+/* Fix for shiny */
+#field-display-overview .field-formatter-settings-edit-form .form--slick  .form-item {
+  margin: 0;
+}
+
 .form--field.form--slick {
   background: #fafafa;
   border: 1px solid #9bacc3;
@@ -11,39 +15,72 @@
   margin: 30px 0;
 }
 
-#field-display-overview .field-formatter-settings-edit-form .form--slick::after,
-.form--field.form--slick::after {
+.form--field.form--slick::after,
+.form--slick .form-checkboxes::after {
   content: "";
   display: table;
   clear: both;
 }
 
-#field-display-overview .field-formatter-settings-edit-form .form--slick .form-item,
 .form--field.form--slick .form-item {
   border-bottom: 1px solid #e7e7e7;
-  border-right: 1px solid #e7e7e7;
-  border-left: 0;
+  border-left: 1px solid #e7e7e7;
   border-top: 1px solid #fff;
   padding: 20px 10px 12px;
   margin: 0;
 }
 
+.form--field.form--slick .form-type-radio,
+.form--field.form--slick .form-type-textarea {
+  border: 0;
+}
+
 @media (min-width: 64em) {
-  #field-display-overview .field-formatter-settings-edit-form .form--slick .form-item,
   .form--field.form--slick .form-item {
-    display: inline-block;
+    display: block;
+    float: left;
     padding: 20px 0 12px;
     width: 50%;
   }
-  #field-display-overview .field-formatter-settings-edit-form .form--slick .form-item label,
+
+  .form--field.form--slick .form-checkboxes {
+    width: 100%;
+  }
+
+  .form--field.form--slick .form-type-textarea {
+    display: block;
+    padding: 12px;
+  }
+
   .form--field.form--slick .form-item label {
-    width: 170px;
+    width: 180px;
+  }
+
+  .form--field.form--slick .form-type-radios {
+    padding-bottom: 0;
+  }
+
+  .form--field.form--slick .form-radios .form-type-radio {
+    min-height: 22px;
+    padding: 0;
+  }
+
+  .form--field.form--slick .form-radios .form-type-radio input {
+    float: none;
+    max-width: 100%;
+  }
+
+  .form--field.form--slick .form-radios .form-type-radio label.option {
+    float: none;
+    min-height: 22px;
+    padding-left: 32px !important;
+    text-align: left;
+    width: auto;
   }
 }
 
-#field-display-overview .field-formatter-settings-edit-form .form--slick .form-type-checkboxes,
 .form--field.form--slick .form-type-checkboxes {
-  border: 4px solid #e7e7e7;
+  border-bottom: 4px solid #e7e7e7;
   clear: both;
   margin-bottom: 0;
   padding-bottom: 0;
@@ -52,7 +89,6 @@
   position: relative;
 }
 
-#field-display-overview .field-formatter-settings-edit-form .form--slick .form-type-checkboxes > label,
 .form--field.form--slick .form-type-checkboxes > label {
   background: #e7e7e7;
   display: block;
