@@ -8,18 +8,13 @@
 html {
   font-size: 100%;
   line-height: 1.375em;
-}
-
-html {
   color: #38465c;
-  font-family: "Open Sans", Arial, sans-serif;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeSpeed !important;
 }
 
-body {
-  font-family: "Open Sans", Arial, sans-serif;
+.form--slick {
   font-size: 16px;
   font-size: 1rem;
 }
@@ -57,12 +52,17 @@ body {
   clear: both;
 }
 
+/* Fix for adminimal theme */
+body.page-admin .form--slick,
+body.page-admin .form--slick *,
+.form--slick,
 .form--slick *,
 .form--slick *::before,
 .form--slick *::after {
   -o-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
+  font-family: Arial, sans-serif;
 }
 
 /**
@@ -126,104 +126,121 @@ body {
   cursor: not-allowed;
 }
 
-.form--slick input[type="checkbox"] {
-  display: block;
-  height: 24px;
-  line-height: 22px;
-  max-width: 100%;
-  min-width: 48px;
+.form--slick .form-type-radio {
+  border: 0;
+}
+
+.form--slick .form-type-radio,
+.form--slick .form-type-checkbox {
+  position: relative;
+}
+
+/**
+ * Fixes for Adminimal gargantuan label.
+ */
+.form--slick .form-item label,
+.form--slick .form-item label.option {
+  font-weight: 400;
+  line-height: 1;
+  font-size: 14px;
+  font-size: 0.875rem;
+}
+
+.form--slick .form-type-radio input,
+.form--slick .form-type-checkbox input {
+  cursor: pointer;
+  left: 0;
   opacity: 0;
   position: absolute;
-  z-index: 3;
+  top: 0;
+  width: 20px;
+  height: 20px;
+  z-index: 2;
 }
 
-.form--slick input[type="checkbox"] ~ .field-suffix {
-  background: white;
-  background-image: url('data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0idXRmLTgiPz4gPHN2ZyB2ZXJzaW9uPSIxLjEiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PGRlZnM+PGxpbmVhckdyYWRpZW50IGlkPSJncmFkIiBncmFkaWVudFVuaXRzPSJvYmplY3RCb3VuZGluZ0JveCIgeDE9IjAuNSIgeTE9IjAuMCIgeDI9IjAuNSIgeTI9IjEuMCI+PHN0b3Agb2Zmc2V0PSIwJSIgc3RvcC1jb2xvcj0iIzAwMDAwMCIgc3RvcC1vcGFjaXR5PSIwLjEiLz48c3RvcCBvZmZzZXQ9IjEwMCUiIHN0b3AtY29sb3I9IiMwMDAwMDAiIHN0b3Atb3BhY2l0eT0iMC4wIi8+PC9saW5lYXJHcmFkaWVudD48L2RlZnM+PHJlY3QgeD0iMCIgeT0iMCIgd2lkdGg9IjEwMCUiIGhlaWdodD0iMTAwJSIgZmlsbD0idXJsKCNncmFkKSIgLz48L3N2Zz4g'), url('data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0idXRmLTgiPz4gPHN2ZyB2ZXJzaW9uPSIxLjEiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PGRlZnM+PGxpbmVhckdyYWRpZW50IGlkPSJncmFkIiBncmFkaWVudFVuaXRzPSJvYmplY3RCb3VuZGluZ0JveCIgeDE9IjAuMCIgeTE9IjAuNSIgeDI9IjEuMCIgeTI9IjAuNSI+PHN0b3Agb2Zmc2V0PSI1MCUiIHN0b3AtY29sb3I9IiM2YWQzZWYiLz48c3RvcCBvZmZzZXQ9IjUwJSIgc3RvcC1jb2xvcj0iIzAwMDAwMCIgc3RvcC1vcGFjaXR5PSIwLjAiLz48L2xpbmVhckdyYWRpZW50PjwvZGVmcz48cmVjdCB4PSIwIiB5PSIwIiB3aWR0aD0iMTAwJSIgaGVpZ2h0PSIxMDAlIiBmaWxsPSJ1cmwoI2dyYWQpIiAvPjwvc3ZnPiA=');
-  background-size: 100%;
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(0, 0, 0, 0.1)), color-stop(100%, rgba(0, 0, 0, 0))), -webkit-linear-gradient(0deg, #6ad3ef 50%, rgba(0, 0, 0, 0) 50%);
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(0, 0, 0, 0.1)), color-stop(100%, rgba(0, 0, 0, 0))), linear-gradient(90deg, #6ad3ef 50%, rgba(0, 0, 0, 0) 50%);
-  background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0)), -webkit-linear-gradient(0deg, #6ad3ef 50%, rgba(0, 0, 0, 0) 50%);
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0)), linear-gradient(90deg, #6ad3ef 50%, rgba(0, 0, 0, 0) 50%);
-  background-size: 200% 100%;
-  background-position: 100% 0;
-  background-origin: border-box;
-  background-clip: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.3);
-  box-shadow: 0 0.1em 0.1em rgba(0, 0, 0, 0.2) inset, 0 0.45em 0 0.1em rgba(0, 0, 0, 0.05) inset;
-  display: inline-block;
-  font-size: 150%;
-  height: 22px;
-  margin: 0;
-  overflow: hidden;
-  -webkit-transition-duration: 0.4s;
-  transition-duration: 0.4s;
-  -webkit-transition-property: padding, width, background-position, text-indent;
-  transition-property: padding, width, background-position, text-indent;
-  vertical-align: middle;
-  width: 48px;
-}
-
-.form--slick input[type="checkbox"] ~ .field-suffix::before,
-.form--slick input[type="checkbox"] ~ .field-suffix::after {
-  font: bold 11px/20px sans-serif;
-  text-transform: uppercase;
-  line-height: 22px;
-}
-
-.form--slick input[type="checkbox"] ~ .field-suffix::after {
-  color: rgba(0, 0, 0, 0.45);
-  content: 'Off';
-  float: left;
-  text-indent: 4px;
-  text-shadow: none;
-}
-
-.form--slick input[type="checkbox"]:checked ~ .field-suffix {
-  padding-left: 48px;
-  width: 22px;
-  background-position: 0 0;
-}
-
-.form--slick input[type="checkbox"]:checked ~ .field-suffix::before {
-  background: white;
-  background-image: url('data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0idXRmLTgiPz4gPHN2ZyB2ZXJzaW9uPSIxLjEiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PGRlZnM+PGxpbmVhckdyYWRpZW50IGlkPSJncmFkIiBncmFkaWVudFVuaXRzPSJvYmplY3RCb3VuZGluZ0JveCIgeDE9IjAuNSIgeTE9IjAuMCIgeDI9IjAuNSIgeTI9IjEuMCI+PHN0b3Agb2Zmc2V0PSIwJSIgc3RvcC1jb2xvcj0iIzAwMDAwMCIgc3RvcC1vcGFjaXR5PSIwLjIiLz48c3RvcCBvZmZzZXQ9IjEwMCUiIHN0b3AtY29sb3I9IiMwMDAwMDAiIHN0b3Atb3BhY2l0eT0iMC4wIi8+PC9saW5lYXJHcmFkaWVudD48L2RlZnM+PHJlY3QgeD0iMCIgeT0iMCIgd2lkdGg9IjEwMCUiIGhlaWdodD0iMTAwJSIgZmlsbD0idXJsKCNncmFkKSIgLz48L3N2Zz4g');
-  background-size: 100%;
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(0, 0, 0, 0.2)), color-stop(100%, rgba(0, 0, 0, 0)));
-  background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0));
-  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0));
-  box-shadow: 0 0.1em 0.1em 0.1em rgba(255, 255, 255, 0.8) inset, 0 0 0.5em rgba(0, 0, 0, 0.3);
-  border: 1px solid rgba(0, 0, 0, 0.35);
-  border-radius: inherit;
-  content: 'On';
-  float: left;
-  height: 22px;
-  margin: -1px;
-  color: white;
-  text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.3);
-  text-indent: -32px;
-  width: 22px;
-}
-
-.form--slick input[type="checkbox"]:active ~ .field-suffix::before {
-  background-color: #e7e7e7;
-}
-
-.form--slick input[type="checkbox"]:focus ~ .field-suffix {
-  box-shadow: 0 0.1em 0.1em rgba(0, 0, 0, 0.2) inset, 0 0.45em 0 0.1em rgba(0, 0, 0, 0.05) inset, 0 0 0.4em 1px #6ad3ef;
-}
-
-.form--slick input[type="checkbox"][disabled] ~ .field-suffix::before,
-.form--slick input[type="checkbox"][disabled] ~ .field-suffix::after {
-  opacity: 0.5;
-}
-
+.form--slick .form-type-radio label,
 .form--slick .form-type-checkbox label {
-  display: inline-block;
-  float: none;
-  padding: .8em;
+  line-height: 18px;
   position: relative;
-  border-top-width: 0;
+}
+
+.form--slick .form-type-radio label.option,
+.form--slick .form-type-checkbox .field-suffix {
+  padding-left: 0;
+  position: relative;
+}
+
+.form--slick .form-type-checkbox .field-suffix {
+  top: 14px;
+}
+
+.form--slick .form-type-radio label::before,
+.form--slick .form-type-checkbox .field-suffix::before {
+  display: block;
+  background: #fff;
+  content: '';
+  outline: 0;
+  border: 2px solid #dadada;
+  font-size: 12px;
+  font-size: 0.75rem;
+  width: 20px;
+  height: 20px;
+  line-height: 18px;
+  margin-right: 5px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  text-align: center;
+  -webkit-transition: all 0.4s ease-in-out 0s;
+  transition: all 0.4s ease-in-out 0s;
+}
+
+.form--slick .form-type-checkbox .field-suffix::before {
+  left: auto;
+  right: -26px;
+}
+
+.form--slick .form-type-radio .form-radio:checked + label::before,
+.form--slick .form-type-checkbox .form-checkbox:checked + .field-suffix::before {
+  background: #fff;
+  outline: 0;
+  border-color: #ff6d2c;
+  color: #ff6d2c;
+  font-size: 32px;
+  line-height: 16px;
+}
+
+.form--slick .form-type-radio .form-radio:focus,
+.form--slick .form-type-radio .form-checkbox:focus,
+.form--slick .form-type-checkbox .form-radio:focus,
+.form--slick .form-type-checkbox .form-checkbox:focus {
+  box-shadow: none;
+}
+
+/* bull */
+.form--slick .form-type-radio .form-radio:checked + label::before {
+  content: '\02022';
+}
+
+.form--slick .form-type-checkbox .form-checkbox:checked + .field-suffix::before {
+  content: '\2713';
+  font-size: 16px;
+}
+
+.form--slick .form-type-radio label::before {
+  border-radius: 50%;
+}
+
+.form--slick .form-radios {
+  margin-bottom: 10px;
+}
+
+.form--slick .form-type-textarea .grippie {
+  display: none;
+}
+
+.form--slick .form-type-textarea .form-textarea {
+  resize: vertical;
 }
 
 /**
@@ -251,8 +268,9 @@ body {
 /**
  * Fieldset.
  */
-.form--slick fieldset {
-  margin: 40px 0;
+.form--slick fieldset,
+.form--slick .vertical-tabs fieldset.vertical-tabs-pane {
+  margin: 0;
   padding: 30px 0;
   border-color: #808080;
 }
@@ -362,6 +380,11 @@ html.js .form--slick .collapsed .fieldset-legend {
   width: 100%;
 }
 
+html.js .form--slick .collapsible .fieldset-legend::after {
+  content: "";
+}
+
+
 html.js .form--slick .collapsible .fieldset-legend span.summary {
   position: absolute !important;
   clip: rect(1px, 1px, 1px, 1px);
@@ -469,8 +492,8 @@ html.js .form--slick .collapsed .fieldset-legend .fieldset-legend-prefix::after 
   box-shadow: 0 2px 10px -2px #000;
   color: #dadada !important;
   display: block;
-  font-size: 12px;
-  font-size: 0.75rem;
+  font-size: 13px;
+  line-height: 1.2;
   min-height: 40px;
   max-width: 320px;
   min-width: 210px;
@@ -600,9 +623,12 @@ html.js .form--slick .collapsed .fieldset-legend .fieldset-legend-prefix::after 
 .form--slick .form-item .form-text,
 .form--slick .form-item .form-select,
 .form--slick .form-item .form-textarea {
+  background: #fff;
   border: 1px solid #dadada;
+  border-radius: 0;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07) inset;
   line-height: 22px;
+  margin: 0; /* Fix for ember */
   min-height: 22px;
   padding: 2px 5px;
   width: auto;
@@ -614,6 +640,13 @@ html.js .form--slick .collapsed .fieldset-legend .fieldset-legend-prefix::after 
   width: 98%;
 }
 
+.form--slick .form-item .form-text,
+.form--slick .form-item .form-select,
+.form--slick .form-item .form-textarea {
+  font-size: 14px;
+  font-size: 0.875rem;
+}
+
 .form--slick .form-item .form-text:focus,
 .form--slick .form-item .form-select:focus,
 .form--slick .form-item .form-textarea:focus {
@@ -622,9 +655,9 @@ html.js .form--slick .collapsed .fieldset-legend .fieldset-legend-prefix::after 
 }
 
 .form--slick .form-item .form-select {
-  line-height: 22px;
+  line-height: 32px;
   min-width: 120px;
-  padding: 1px 2px;
+  padding: 5px 2px;
   vertical-align: middle;
   -moz-appearance: none;
   -webkit-appearance: none;
@@ -663,23 +696,25 @@ html.js .form--slick .collapsed .fieldset-legend .fieldset-legend-prefix::after 
 .form--slick .form-item input,
 .form--slick .form-item select {
   float: left;
-  max-width: 140px;
+  max-width: 160px;
   min-width: 40px;
+}
+
+.form--slick .form-radios {
+  margin-left: 180px;
 }
 
 .form--slick .form-item label {
   float: left;
   padding: 5px 5px 5px 0 !important;
   /* Overrides over-specified Seven */
-  width: 140px;
+  width: 160px;
   text-align: right;
   white-space: normal;
 }
 
-.form--slick .form-item label,
-.form--slick .form-item label.option {
-  font-weight: 400;
-  line-height: 1;
+.form--slick .form-type-checkboxes > label {
+  padding-right: 0 !important;
 }
 
 .form--slick .form-item.form-type-textfield input {
@@ -711,6 +746,7 @@ html.js .form--slick .collapsed .fieldset-legend .fieldset-legend-prefix::after 
   min-height: 100%;
   left: 0;
   min-width: 100%;
+  margin: 0; /* Fix for ember */
   position: absolute;
   top: 0;
   width: 100%;
@@ -774,6 +810,7 @@ html.js .form--slick .collapsed .fieldset-legend .fieldset-legend-prefix::after 
 .form--slick .vertical-tabs .fieldset--responsive .form-item input,
 .form--slick .vertical-tabs .fieldset--responsive .form-item select {
   max-width: 100px;
+  margin: 0; /* Fix for ember */
 }
 
 .form--slick .vertical-tabs .fieldset--responsive .form-item .form-checkbox {
@@ -957,7 +994,7 @@ html.js .form--slick .collapsed .fieldset-legend .fieldset-legend-prefix::after 
   line-height: 1.2;
   margin: 0;
   min-height: 42px;
-  padding: 20px 0 10px;
+  padding: 20px 5px 10px;
   text-align: center;
   text-transform: uppercase;
   width: 100%;
